# hy3d

./: .gitignore  AGENTS.md  CMakeLists.txt  My AR Studio GLB Fix 4.blend  My AR Studio GLB Fix 4.blend.bak  My AR Studio GLB Fix 4.blend1  README.md  final.md  plan.md  requirements-hy3d.lock.txt  requirements-torch-cu124.lock.txt  requirements-win-cu124.lock.txt  spec.md  test.md  todos.md
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: ci.yml
.opencode/: memory.db-shm  memory.db-wal
benchmarks/: benchmark_gguf_loader.cpp  benchmark_tensor_lookup.cpp
examples/: generate.ps1  texture.ps1
scripts/: build_hy3dpaint_windows.ps1  download_hy3d_models.ps1  generate_3d_model.ps1  hy3d_generate.py  hy3d_run_context.py  hy3d_setup_helpers.ps1  hy3d_texture.py  hy3d_toolchain.ps1  make_release.ps1  patch_hy3dpaint_windows.py  patch_myarstudio_glbfix_blend.py  run_python_backend.ps1  run_texture_backend.ps1  sample_character_final_texture_80.ps1  setup_hy3d_python.ps1  verify_release.ps1  write_dependency_manifest.py
src/: backend_paths.cpp  backend_paths.h  hy3d_backend.cpp  hy3d_backend.h  hy3d_cli.cpp  hy3d_cli.h  hy3d_commands.cpp  hy3d_commands.h  hy3d_gguf.cpp  hy3d_gguf.h  hy3d_math.cpp  hy3d_math.h  hy3d_model_loader.cpp  hy3d_model_loader.h  hy3d_result.h  hy3d_runtime.cpp  hy3d_runtime.h  main.cpp  process_runner.cpp  process_runner.h
tests/: generate_native_reference.py  test_backend.cpp  test_backend_paths.cpp  test_backend_wrappers.ps1  test_cli.cpp  test_convert_hy3d_shape_to_gguf.py  test_dependency_lock.ps1  test_dependency_manifest.py  test_download_sources.ps1  test_gguf.cpp  test_gguf_loader.cpp  test_hy3d_commands.cpp  test_hy3d_generate.py  test_hy3d_math.cpp  test_hy3d_model_loader.cpp  test_hy3d_run_context.py  test_hy3d_runtime.cpp  test_hy3d_texture.py  test_hy3d_toolchain.ps1  test_make_release.ps1  test_native_parity.cpp  test_patch_hy3dpaint_windows.py  test_process_runner.cpp  test_result.cpp  test_setup_helpers.ps1
tests/fixtures/: attention_numpy_reference.csv
tools/: convert-hy3d-shape-to-gguf.py
